--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,8 @@
         <section class="sidebar">
             <div id="connect">
               <h2>Connect with me</h2>
-              <a href="https://github.com/ahmadli0" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-              <a href="https://www.linkedin.com/in/ahmadli0/" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+              <a href="https://github.com/saidahmadli" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+              <a href="https://www.linkedin.com/in/saidahmadli/" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
               <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
             </div>
         </section>
